@@ -1541,10 +1541,12 @@ class AppView(gtk.TreeView):
         return False
 
     def _set_cursor(self, btn, cursor):
-        pointer = gtk.gdk.device_get_core_pointer()
-        x, y = pointer.get_state(self.window)[0]
-        if btn.point_in(int(x), int(y)):
-            self.window.set_cursor(cursor)
+        # make sure we have a window instance (LP: #617004)
+        if isinstance(self.window, gtk.gdk.Window):
+            pointer = gtk.gdk.device_get_core_pointer()
+            x, y = pointer.get_state(self.window)[0]
+            if btn.point_in(int(x), int(y)):
+                self.window.set_cursor(cursor)
 
     def _on_transaction_started(self, backend, tr):
         """ callback when an application install/remove transaction has started """
